--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 Examples
 Homework1
 hotel_booking_credit_card_tutoriale/Ardit_version
+hotel_booking_credit_card_tutoriale/child_method_overwrite_tutorial.py
